was limited to 4kB, so the "procmatch" may not find the process if the pattern is past this limit. The limit
was removed on Linux. On AIX the limit was rised to 8kB.

Fixed: MacOS: Only first 16 characters of the process name was displayed for privileged processes,
so the pattern based process check and the procmatch CLI may miss some processes.

Fixed: If monit is linked with AddresSanitizer and a custom configuration file is passed via the -c option,
monit  may crash.

Fixed: Fix memory leak if a pemfile option is used with a path that cannot be read.

Fixed: Fix memory leak if custom "set mail-format" is set.

Fixed: Fix memory leak when no explicit "check system" service entry is present in monit configuration and
monit is reloaded.

Fixed: Fix memory leak if "restart program" is defined for a service and monit is reloaded.


Version 5.26.0

New: Allow any characters including space in a service name if the name is
     enclosed in quotes. Example:
     check process "apache 😍" with pidfile /var/run/httpd.pid

New: The load average test now allows to set the per-CPU-core limit, so it 
     allows for generic load average limit policy regardless of CPU count. Example:
        if loadavg(1m) per core > 2 then alert

New: Added the MQTT protocol test.
     Syntax:
         IF FAILED PORT <number> PROTOCOL MQTT [USERNAME <string> PASSWORD <string>] THEN ALERT
     Example:
         check process mosquitto with pidfile /var/run/mosquitto.pid
           start program = "/sbin/start mosquitto"
           stop program = "/sbin/stop mosquitto"
           if failed port 1883 protocol mqtt then alert

Fixed: Filesystem with missing free inodes statistics (such as CEPH) shown wrong free value (-1).

Fixed: Issue #829: The start delay is now in effect just on first monit start after machine reboot.

Fixed: TLSv1.3 support detection during compile time


Version 5.25.3

Fixed: Issue #619: The HTTP protocol test may log SSL read errors and the content/checksum test may